complete definition practice, design enhanced

--- a/app/templates/practice/article-questions.html
+++ b/app/templates/practice/article-questions.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Article Quiz - Question {{ question_num }} of {{ total_questions }}{% endblock %}
+{% block title %}Article Practice - Question {{ question_num }} of {{ total_questions }}{% endblock %}
 
 {% block content %}
 <div class="max-w-3xl w-full mx-auto mt-20 px-4">
