get question type from request args, but need to create html file for it!

--- a/app/templates/practice/list.html
+++ b/app/templates/practice/list.html
@@ -99,12 +99,12 @@
         </label>
         <div class="flex gap-4">
           <label class="flex items-center gap-2 text-sm font-medium text-gray-700 cursor-pointer">
-            <input type="radio" name="questionType" value="text"
+            <input type="radio" name="questionType" value="text_box_question"
                    class="text-sky-600 focus:ring-sky-500" checked>
             Text Box
           </label>
           <label class="flex items-center gap-2 text-sm font-medium text-gray-700 cursor-pointer">
-            <input type="radio" name="questionType" value="choice"
+            <input type="radio" name="questionType" value="single_choice_question"
                    class="text-sky-600 focus:ring-sky-500">
             Single Choice
           </label>
