add all option to practices, initialized the lesson work

--- a/app/templates/practice/list.html
+++ b/app/templates/practice/list.html
@@ -90,6 +90,7 @@
           <option value="10" selected>10 Questions</option>
           <option value="15">15 Questions</option>
           <option value="20">20 Questions</option>
+          <option value="all">all</option>
         </select>
       </div>
 
